@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Games-Wumpus
-version:            2009072701
+version:            2009072702
 abstract:           Play Hunt the Wumpus
 author:
     - Abigail <cpan@abigail.be>
