@@ -5,7 +5,7 @@ use strict;
 use warnings;
 no  warnings 'syntax';
 
-our $VERSION = '2009072701';
+our $VERSION = '2009072702';
 
 use Hash::Util::FieldHash qw [fieldhash];
 
