@@ -6,7 +6,7 @@ use strict;
 use warnings;
 no warnings 'syntax';
 
-use Test::More tests => 7;
+use Test::More tests => 8;
 
 BEGIN {
     use_ok 'Games::Wumpus';
@@ -19,5 +19,8 @@ is $Games::Wumpus::Cave::VERSION,      $Games::Wumpus::VERSION, "VERSION check";
 is $Games::Wumpus::Room::VERSION,      $Games::Wumpus::VERSION, "VERSION check";
 is $Games::Wumpus::Constants::VERSION, $Games::Wumpus::VERSION, "VERSION check";
 
+
+ok $Games::Wumpus::Cave::VERSION =~ /^2009[01][0-9][0-3][0-9][0-9]{2}$/,
+  "VERSION format";
 
 __END__
